# VIIRS-Swath-Granules

./: Loading Swath Granule.ipynb  README.md  Search and Download.ipynb  makefile  pyproject.toml
VIIRS_swath_granules/: VIIRS_swath_granule.py  retrieve_granule.py
