[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VIIRS-Swath-Granules"
version = "1.1.1"
description = "Visible Infrared Imaging Radiometer Suite (VIIRS) Swath Product Search and Download Utility"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
    { name = "Evan Davis", email = "evan.w.davis@jpl.nasa.gov" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "colored-logging",
    "earthaccess",
    "modland>=1.1.1",
    "python-dateutil",
    "rasters",
    "requests"
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=6.0",
    "pytest-cov",
    "jupyter",
    "pytest",
    "twine"
]

[tool.setuptools.package-data]
VIIRS_swath_granules = ["*.txt"]

[project.urls]
"Homepage" = "https://github.com/JPL-Evapotranspiration-Algorithms/VIIRS-Swath-Granules"

[tool.setuptools.packages.find]
include = ["python -c "import VIIRS_swath_granules; print(VIIRS_swath_granules.__file__)""]
exclude = ["data", "build", "tests"]
